add_executable(dpfp dpfp.c)
add_executable(dpfp_threaded dpfp_threaded.c)
add_executable(fxload fxload.c ezusb.c)
add_executable(hotplugtest hotplugtest.c)
add_executable(listdevs listdevs.c)
add_executable(sam3u_benchmark sam3u_benchmark.c)
add_executable(testlibusb testlibusb.c)
add_executable(xusb xusb.c)

include_directories(../libusb)

target_link_libraries(dpfp libusb)
target_link_libraries(dpfp_threaded libusb)
target_link_libraries(fxload libusb)
target_link_libraries(hotplugtest libusb)
target_link_libraries(listdevs libusb)
target_link_libraries(sam3u_benchmark libusb)
target_link_libraries(testlibusb libusb)
target_link_libraries(xusb libusb)
