add_executable(dpfp dpfp.c)
add_executable(dpfp_threaded dpfp_threaded.c)
add_executable(fxload fxload.c ezusb.c)
add_executable(hotplugtest hotplugtest.c)
add_executable(listdevs listdevs.c)
add_executable(sam3u_benchmark sam3u_benchmark.c)
add_executable(testlibusb testlibusb.c)
add_executable(xusb xusb.c)

include_directories(../libusb)

target_link_libraries(dpfp usb-1.0)
target_link_libraries(dpfp_threaded usb-1.0)
target_link_libraries(fxload usb-1.0)
target_link_libraries(hotplugtest usb-1.0)
target_link_libraries(listdevs usb-1.0)
target_link_libraries(sam3u_benchmark usb-1.0)
target_link_libraries(testlibusb usb-1.0)
target_link_libraries(xusb usb-1.0)
